feat: Team detail page with list team member
