# internal/handlers/teams_handler.go
@@ -2,6 +2,7 @@ package handlers
 
 import (
 	"net/http"
+	"strconv"
 	"trieu_mock_project_go/internal/dtos"
 	appErrors "trieu_mock_project_go/internal/errors"
 	"trieu_mock_project_go/internal/services"
@@ -23,8 +24,14 @@ func (h *TeamsHandler) TeamsPageHandler(c *gin.Context) {
 	})
 }
 
+func (h *TeamsHandler) TeamDetailsPageHandler(c *gin.Context) {
+	c.HTML(http.StatusOK, "pages/team_details.html", gin.H{
+		"title": "Team Details",
+	})
+}
+
 func (h *TeamsHandler) ListTeams(c *gin.Context) {
-	var query dtos.ListTeamsRequestQuery
+	var query dtos.PaginationRequestQuery
 	if appErrors.HandleBindError(c, c.ShouldBindQuery(&query)) {
 		return
 	}
@@ -32,6 +39,47 @@ func (h *TeamsHandler) ListTeams(c *gin.Context) {
 	resp, err := h.teamsService.ListTeams(c.Request.Context(), query.Limit, query.Offset)
 	if err != nil {
 		appErrors.RespondError(c, http.StatusInternalServerError, "Failed to list teams")
+		return
+	}
+
+	c.JSON(http.StatusOK, resp)
+}
+
+func (h *TeamsHandler) GetTeamDetails(c *gin.Context) {
+	teamIdParam := c.Param("id")
+
+	teamId, err := strconv.Atoi(teamIdParam)
+	if err != nil {
+		appErrors.RespondError(c, http.StatusBadRequest, "Invalid team ID")
+		return
+	}
+
+	resp, err := h.teamsService.GetTeamDetails(c.Request.Context(), uint(teamId))
+	if err != nil {
+		appErrors.RespondError(c, http.StatusInternalServerError, "Failed to get team details")
+		return
+	}
+
+	c.JSON(http.StatusOK, resp)
+}
+
+func (h *TeamsHandler) GetTeamMembers(c *gin.Context) {
+	teamIdParam := c.Param("id")
+
+	teamId, err := strconv.Atoi(teamIdParam)
+	if err != nil {
+		appErrors.RespondError(c, http.StatusBadRequest, "Invalid team ID")
+		return
+	}
+
+	var query dtos.PaginationRequestQuery
+	if appErrors.HandleBindError(c, c.ShouldBindQuery(&query)) {
+		return
+	}
+
+	resp, err := h.teamsService.GetTeamMembers(c.Request.Context(), uint(teamId), query.Limit, query.Offset)
+	if err != nil {
+		appErrors.RespondError(c, http.StatusInternalServerError, "Failed to get team members")
 		return
 	}
 
